= {project-name} Changelog
:project-name: PyRDP
:uri-repo: https://github.com/GoSecure/pyrdp
:uri-issue: {uri-repo}/issues/

This document provides a high-level view of the changes introduced in {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== <unreleased> - <date>

=== Bug fixes

* Clipboard file transfers compatibility with non-mstsc clients ({uri-issue}464[#464])


== v2.0.0 - 2023-12-22

Winter's Break[ing changes]

=== Release Highlights

* PyPI pre-built packages for Linux, Windows and macOS (easier installation)
* Ported to QT6
* Docker images based on Ubuntu 22.04

Full list of changes follows.

=== Backwards Compatibility Changes

* All tools lost their `.py` suffix. For example, `pyrdp-mitm.py` is now `pyrdp-mitm`.
* Requires Python 3.7
* master Docker container tag renamed devel (master-slim to devel-slim)
* The log field `sessionID` changed format from `<firstname><100000-999999>` to `<adjective>_<name>_<1000000-9999999>` ({uri-issue}458[#458])
* Stolen clipboard files are now stored hashed under the files/ hierarchy without sessionId and linked from filesystems/<sessionID>/clipboard/ hierarchy ({uri-issue}338[#338])
* Python project name is now pyrdp-mitm since pyrdp was taken on PyPI ({uri-issue}456[#456])

=== Enhancements

* Pre-built binaries available on PyPI for Linux, Windows and macOS! ({uri-issue}451[#451])
* PyRDP now runs with QT6 which is better supported than QT5 nowadays ({uri-issue}436[#436], {uri-issue}453[#453])
* Support for RDP version 10.11 ({uri-issue}433[#433])
* Support for Python 3.11 by updating PyAV to get pre-built binary wheels ({uri-issue}437[#437], {uri-issue}438[#438])
* MITM start and termination log messages are now part of the JSON logs ({uri-issue}447[#447])
* Docker images are now based on Ubuntu 22.04 and dependencies were minimized ({uri-issue}455[#455])