@@ -1,6 +1,6 @@
 #
 # This file is part of the PyRDP project.
-# Copyright (C) 2019-2021 GoSecure Inc.
+# Copyright (C) 2019-2024 GoSecure Inc.
 # Licensed under the GPLv3 or later.
 #
 
