@@ -1,6 +1,6 @@
 #
 # This file is part of the PyRDP project.
-# Copyright (C) 2018-2023 GoSecure Inc.
+# Copyright (C) 2018-2024 GoSecure Inc.
 # Licensed under the GPLv3 or later.
 #
 import logging
